--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <spring.version>5.3.1</spring.version>
         <spring-jpa.version>2.2.1.RELEASE</spring-jpa.version>
         <hibernate.version>5.4.23.Final</hibernate.version>
+        <junit.version>4.12</junit.version>
     </properties>
     <dependencies>
         <dependency>
@@ -45,6 +46,12 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -76,6 +83,11 @@
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${spring-jpa.version}</version>
         </dependency>
 
     </dependencies>
